removing unnecessary things

--- a/index.html
+++ b/index.html
@@ -4,28 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Password Genereate</title>
-        <link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="style.css" />
 		<script src="main.js" defer></script>
 	</head>
 	<body>
-
-    <div class="container">
-        <h1>Password registration</h1>
-      <div class="container__label">
-        <table >
-          <tr>
-            <th>#</th>
-            <th>Password</td>
-            </tr>
-            <hr>
-
-          <tr>
-
-          </tr>
-        </table>
-      </div>
-      <button id="btn__generate_password">Generate Password</button>
-
-    </div> 
+		<div class="container">
+			<button id="btn__generate_password">Generate Password</button>
+		</div>
 	</body>
 </html>
